# facetracker

./: LICENSE  README.md
linux_client2/: CMakeLists.txt  README.md  run.ps1  run.sh
linux_client2/src/: main.cpp  tracker.hpp  udp_bridge.cpp
main_client/: CMakeLists.txt  README.md  run.bat  run.ps1  run.sh
main_client/src/: main.cpp  tracker.cpp  types.hpp  udp_bridge.hpp
